--- a/resources/js/Pages/Guest/Components/slick-theme.css
+++ b/resources/js/Pages/Guest/Components/slick-theme.css
@@ -123,6 +123,8 @@
 {
     position: absolute;
     left: 0;
+    top: -10px;
+    padding-bottom: 50;
     color: black;
     display: block;
     padding: 0;
@@ -151,7 +153,7 @@
     display: block;
 
     width: 20px;
-    height: 20px;
+    height: 1000px;
     padding: 5px;
 
     cursor: pointer;
