--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
 
 .container {
     display: grid;
@@ -16,3 +19,5 @@
       minmax(1rem, 1200px)
       minmax(1rem, 1fr);
   }
+
+  
